--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1>Curiosidades de Tecnologia</h1>
       <p>
         Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único
-        lugar.
+        lugar
       </p>
     </header>
     <nav>
